--- a/udqAutoApp/www/index.html
+++ b/udqAutoApp/www/index.html
@@ -8,7 +8,7 @@
     <!-- udqAutoApp 引用 ionic -->
     <link href="lib/ionic/css/ionic.min.css" rel="stylesheet" />
 
-    <script src="lib/ionic/js/ionic.bundle.min.js"></script>
+    <script src="lib/ionic/js/ionic.bundle.js"></script>
     <!-- Cordova 引用，它在生成应用程序时添加到其中。 -->
     <script src="cordova.js"></script>
     <script src="platformOverrides.js"></script>
@@ -17,7 +17,7 @@
     <script src="app.js"></script>
     <script src="app/customer/home/homeCtrl.js"></script>
     <script src="app/login/loginCtrl.js"></script>
-    
+    <script src="app/util/appConfig.js"></script>
 </head>
 <body ng-app="udqApp">
     <ion-nav-view ></ion-nav-view>
