1、与之前的代码合并；

--- a/udqAutoApp/www/index.html
+++ b/udqAutoApp/www/index.html
@@ -14,9 +14,17 @@
     <script src="platformOverrides.js"></script>
     
     <script src="app.js"></script>
+    <script src="app/customer/autoAdd/autoAddCtrl.js"></script>
+    <script src="app/customer/autoMgr/autoMgr.js"></script>
     <script src="app/customer/home/homeCtrl.js"></script>
+    <script src="app/customer/memberCenter/memberCenterCtrl.js"></script>
+    <script src="app/customer/memberInfoEdit/memberInfEditCtrl.js"></script>
+    <script src="app/customer/order/orderCtrl.js"></script>
+    <script src="app/customer/orderEvaluate/orderEvaluateCtrl.js"></script>
+    <script src="app/customer/register/registerCtrl.js"></script>
+    <script src="app/employee/home/home.js"></script>
     <script src="app/login/loginCtrl.js"></script>
-    
+    <script src="app/login/loginSvr.js"></script>
 </head>
 <body ng-app="udqApp">
     <ion-nav-view ></ion-nav-view>
