--- a/udqAutoApp/www/app/login/login.html
+++ b/udqAutoApp/www/app/login/login.html
@@ -1,5 +1,5 @@
 ﻿
-<ion-view title="点趣车生活">
+<ion-view align-title="center" title="点趣车生活">
     <ion-nav-bar class="bar-stable">
         <ion-nav-back-button class="button-clear">
             <i class="ion-arrow-left-c"></i>back
@@ -7,6 +7,16 @@
     </ion-nav-bar>
 
     <ion-content padding="true" class="has-header">
+        <!-- 图片轮播 -->
+        <ion-slide-box ng-repeat="image in images">
+            <ion-slide>
+                <div style="line-height:200px;border:1px solid rgb(238,238,238);border-radius:3px;text-align:center;width:100%;height:auto;background-color:rgb(255,255,255);">
+                     <a href="#">
+                         <i class="icon ion-image" style="font-size:64px;color:rgb(136,136,136);vertical-align：middle;"></i>
+                     </a>
+                 </div>
+            </ion-slide>
+         </ion-slide-box>
         <form>
             <ion-list>
                 <label class="item item-input">
@@ -22,7 +32,7 @@
             </ion-list>
             <div class="button-bar"></div>
 
-            <button class="button button-stable button-block ">登录</button>
+            <button class="button button-stable button-block " ng-click="login()">登录</button>
             <button class="button button-stable button-block ">注册</button>
         </form>
     </ion-content>
