--- a/udqAutoApp/www/index.html
+++ b/udqAutoApp/www/index.html
@@ -12,6 +12,7 @@
     <!-- Cordova 引用，它在生成应用程序时添加到其中。 -->
     <script src="cordova.js"></script>
     <script src="platformOverrides.js"></script>
+    <script src="lib/md5-min.js"></script>
     
 
     <script src="app.js"></script>
