--- a/udqAutoApp/www/app/customer/register/register.html
+++ b/udqAutoApp/www/app/customer/register/register.html
@@ -2,14 +2,14 @@
     <div class="bar bar-header">
         <div class="h1 title">注册</div>
         <!--<a class="button button-clear icon ion-ios-search-strong"></a>-->
-        <button class="button button-icon icon ion-navicon"></button>
+<!--         <button class="button button-icon icon ion-navicon"></button> -->
     </div>
 
     <ion-content padding="true" class="has-header">
         <form>
             <ion-list>
                 <label class="item item-input">
-                    <i class="icon ion-search placeholder-icon"></i>
+                    <i class="icon ion-ios-telephone placeholder-icon"></i>
                     <input type="tel" name="userName" placeholder="请输入手机号码" ng-model="user.userName" required>
                 </label>
 
@@ -17,13 +17,26 @@
                     <label class="item-input-wrapper">
                         <input type="text" placeholder="输入手机验证码">
                     </label>
-                    <button class="button button-small">
+                    <button class="button button-small" ng-click="getValidateCode()">
                         获取手机验证码
                     </button>
                 </div>
+                <div class="spacer" style="height:30px;"></div>
+                <label class="item item-input">
+                    <i class="icon ion-ios-person placeholder-icon"></i>
+                    <input type="text" name="name" placeholder="请输入称呼" required>
+                </label>
+                <label class="item item-input">
+                    <i class="icon ion-key placeholder-icon"></i>
+                    <input type="text" name="name" placeholder="请输入密码" required>
+                </label>
+                <label class="item item-input">
+                    <i class="icon ion-pin placeholder-icon"></i>
+                    <input type="text" name="name" placeholder="请确认密码" required>
+                </label>
 
             </ion-list>
-            <button class="button button-stable button-block ">下一步</button>
+            <button class="button button-stable button-block " ng-click="register()">注册</button>
         </form>
     </ion-content>
 </ion-view>
