1、添加注册service和区域service; 2、添加service区域、注册ID数据保存部分； 3、部分需求更改：注释了注册代码验证；

--- a/udqAutoApp/platforms/android/assets/www/app/customer/order/orderEvaluate.html
+++ b/udqAutoApp/platforms/android/assets/www/app/customer/order/orderEvaluate.html
@@ -22,7 +22,7 @@
             <ion-item>
                 <div class="well">
                     您对此次服务满意度是：
-                    <div star rating-value="ratingVal" max="max" on-hover="onHover" on-leave="onLeave" readonly="{{readonly}}"></div>
+                    <div class="star" rating-value="ratingVal" max="max" on-hover="onHover" on-leave="onLeave" readonly="{{readonly}}"></div>
                 </div>
             </ion-item>
             <ion-item>
