--- a/udqAutoApp/platforms/android/assets/www/app/customer/home/home.html
+++ b/udqAutoApp/platforms/android/assets/www/app/customer/home/home.html
@@ -23,6 +23,13 @@
                                 </a>
                             </div>
                         </ion-slide>
+                        <ion-slide>
+                            <div style="line-height:200px;border:1px solid rgb(238,238,238);border-radius:3px;text-align:center;width:100%;height:auto;background-color:rgb(255,255,255);">
+                                <a href="#">
+                                    <i class="icon ion-image" style="font-size:64px;color:rgb(136,136,136);vertical-align：middle;"></i>
+                                </a>
+                            </div>
+                        </ion-slide>
                     </ion-slide-box>
                     
                     <div class="spacer" style="width:300px;height:30px;"></div>
