--- a/udqAutoApp/platforms/android/assets/www/index.html
+++ b/udqAutoApp/platforms/android/assets/www/index.html
@@ -7,6 +7,8 @@
 
     <!-- udqAutoApp 引用 ionic -->
     <link href="lib/ionic/css/ionic.min.css" rel="stylesheet" />
+    <link href="css/ownMenu.css"rel="stylesheet" />
+    <link href="css/star.css" rel="stylesheet"/>
 
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <!-- Cordova 引用，它在生成应用程序时添加到其中。 -->
@@ -24,12 +26,14 @@
     <script src="app/customer/order/orderCtrl.js"></script>
     <script src="app/customer/order/orderEvaluateCtrl.js"></script>
     <script src="app/customer/register/registerCtrl.js"></script>
+    <script src="app/customer/register/registerSvr.js"></script>
     
     <script src="app/login/loginCtrl.js"></script>
     <script src="app/login/loginSvr.js"></script>
     <script src="app/employee/home/home.js"></script>
     <script src="app/employee/order/orderToBeConfirmedCtrl.js"></script>
     <script src="app/util/appConfig.js"></script>
+    <script src="app/util/regionSvr.js"></script>
     
 </head>
 <body ng-app="udqApp">
