--- a/udqAutoApp/www/app/customer/order/orderEvaluate.html
+++ b/udqAutoApp/www/app/customer/order/orderEvaluate.html
@@ -22,7 +22,7 @@
             <ion-item>
                 <div class="well">
                     您对此次服务满意度是：
-                    <div star rating-value="ratingVal" max="max" on-hover="onHover" on-leave="onLeave" readonly="{{readonly}}"></div>
+                    <div class="star" rating-value="ratingVal" max="max" on-hover="onHover" on-leave="onLeave" readonly="{{readonly}}"></div>
                 </div>
             </ion-item>
             <ion-item>
