--- a/udqAutoApp/www/app/customer/register/register.html
+++ b/udqAutoApp/www/app/customer/register/register.html
@@ -10,29 +10,28 @@
             <ion-list>
                 <label class="item item-input">
                     <i class="icon ion-ios-telephone placeholder-icon"></i>
-                    <input type="tel" name="userName" placeholder="请输入手机号码" ng-model="user.userName" required>
+                    <input type="tel" placeholder="请输入手机号码" ng-model="userInfo.phoneNumber" required>
                 </label>
-
-                <div class="item item-input-inset">
+                <!-- <div class="item item-input-inset">
                     <label class="item-input-wrapper">
                         <input type="text" placeholder="输入手机验证码">
                     </label>
                     <button class="button button-small" ng-click="getValidateCode()">
                         获取手机验证码
                     </button>
-                </div>
+                </div> -->
                 <div class="spacer" style="height:30px;"></div>
                 <label class="item item-input">
                     <i class="icon ion-ios-person placeholder-icon"></i>
-                    <input type="text" name="name" placeholder="请输入称呼" required>
+                    <input type="text" name="name" ng-model="userInfo.userName" placeholder="请输入称呼" required>
                 </label>
                 <label class="item item-input">
                     <i class="icon ion-key placeholder-icon"></i>
-                    <input type="text" name="name" placeholder="请输入密码" required>
+                    <input type="password" name="name" ng-model="userInfo.password" placeholder="请输入密码" required>
                 </label>
                 <label class="item item-input">
                     <i class="icon ion-pin placeholder-icon"></i>
-                    <input type="text" name="name" placeholder="请确认密码" required>
+                    <input type="password" name="name" placeholder="请确认密码" ng-pattern={{userInfo.password}} required>
                 </label>
 
             </ion-list>
