1、登录、注册、车辆管理逻辑大致调通

--- a/udqAutoApp/www/app/customer/auto/autoAdd1.html
+++ b/udqAutoApp/www/app/customer/auto/autoAdd1.html
@@ -1,11 +1,8 @@
-<ion-view title="添加车辆信息">
+﻿<ion-view title="添加车辆信息">
     <ion-nav-bar>
         <ion-nav-back-button class="button-clear">
             <div><i class="ion-arrow-left-c"></i></div>
         </ion-nav-back-button>
-        <ion-nav-buttons side="right">
-            <button class="button-clear" ng-click="skipToHome()">跳过</button>
-        </ion-nav-buttons>
     </ion-nav-bar>
     <ion-content padding="true" class="has-header">
         <form>
@@ -21,11 +18,11 @@
                 </label>
                 <label class="item item-input">
                     <i class="icon ion-android-color-palette placeholder-icon"></i>
-                    <input type="text" name="color" ng-model="autoInfo.color" placeholder="请输入颜色"  >
+                    <input type="text" name="color" ng-model="autoInfo.color" placeholder="请输入颜色">
                 </label>
                 <label class="item item-input">
                     <i class="icon ion-android-options placeholder-icon"></i>
-                    <input type="text" name="model" ng-model="autoInfo.model" placeholder="请输入型号"  >
+                    <input type="text" name="model" ng-model="autoInfo.model" placeholder="请输入型号">
                 </label>
                 <div class="spacer" style="height:10px;"></div>
                 <!-- 选择小区 -->
