--- a/udqAutoApp/www/app/customer/member/memberCenter.html
+++ b/udqAutoApp/www/app/customer/member/memberCenter.html
@@ -3,7 +3,7 @@
         <div>
             <ion-nav-bar class="bar-stable ">
                 <ion-nav-back-button class="button-clear">
-                    <i class="ion-arrow-left-c"></i>back
+                    <div><i class="ion-ios-arrow-left"></i></div>
                 </ion-nav-back-button>
                 <a class="button button-clear icon ion-ios-search-strong"></a>
             </ion-nav-bar>
