--- a/udqAutoApp/www/app/login/login.html
+++ b/udqAutoApp/www/app/login/login.html
@@ -41,7 +41,7 @@
             <div class="button-bar"></div>
 
             <button class="button button-stable button-block " ng-click="login()">登录</button>
-            <button class="button button-stable button-block ">注册</button>
+            <button class="button button-stable button-block " ng-click="register()">注册</button>
         </form>
     </ion-content>
 
