--- a/udqAutoApp/www/index.html
+++ b/udqAutoApp/www/index.html
@@ -20,6 +20,7 @@
     <script src="app.js"></script>
     <script src="app/customer/auto/autoAddCtrl.js"></script>
     <script src="app/customer/auto/autoMgr.js"></script>
+    <script src="app/customer/auto/autoSvr.js"></script>
     <script src="app/customer/home/homeCtrl.js"></script>
     <script src="app/customer/member/memberCenterCtrl.js"></script>
     <script src="app/customer/member/memberInfoEditCtrl.js"></script>
