--- a/udqAutoApp/www/app/customer/auto/autoMgr.html
+++ b/udqAutoApp/www/app/customer/auto/autoMgr.html
@@ -17,7 +17,7 @@
             <ion-item ng-repeat="item in autoItems"
                       class="item-thumbnail-left">
 
-                <h2>{{item.pn}}{{item.brand}}</h2>
+                <h2>车牌号：{{item.pn}}<br />品牌：{{item.brand}}</h2>
                 
                 <ion-option-button class="button-info"
                                    ng-click="delete(item)">
