--- a/udqAutoApp/platforms/android/assets/www/app/customer/auto/autoAdd.html
+++ b/udqAutoApp/platforms/android/assets/www/app/customer/auto/autoAdd.html
@@ -1,7 +1,7 @@
 <ion-view title="添加车辆信息">
     <ion-nav-bar>
         <ion-nav-back-button class="button-clear">
-            <i class="ion-arrow-left-c"></i>back
+            <div><i class="ion-arrow-left-c"></i></div>
         </ion-nav-back-button>
         <ion-nav-buttons side="right">
             <button class="button-clear" ng-click="skipToHome()">跳过</button>
@@ -12,20 +12,20 @@
             <ion-list>
                 <label class="item item-input">
                     <i class="icon ion-model-s placeholder-icon"></i>
-                    <input type="text" name="pn" ng-model="pn" ng-pattern="pnRe" placeholder="请输入车牌号" required>
+                    <input type="text" name="pn" ng-model="autoInfo.pn" ng-pattern="pnRe" placeholder="请输入车牌号" required>
                 </label>
                 <div class="spacer" style="height:10px;"></div>
                 <label class="item item-input">
                     <i class="icon ion-ios-color-filter-outline placeholder-icon"></i>
-                    <input type="text" name="brand" placeholder="请输入品牌" required>
+                    <input type="text" name="brand" ng-model="autoInfo.brand" placeholder="请输入品牌" required>
                 </label>
                 <label class="item item-input">
                     <i class="icon ion-android-color-palette placeholder-icon"></i>
-                    <input type="text" name="color" placeholder="请输入颜色"  >
+                    <input type="text" name="color" ng-model="autoInfo.color" placeholder="请输入颜色"  >
                 </label>
                 <label class="item item-input">
                     <i class="icon ion-android-options placeholder-icon"></i>
-                    <input type="text" name="model" placeholder="请输入型号"  >
+                    <input type="text" name="model" ng-model="autoInfo.model" placeholder="请输入型号"  >
                 </label>
                 <div class="spacer" style="height:10px;"></div>
                 <!-- 选择小区 -->
@@ -43,7 +43,7 @@
                 </label>
                 <label class="item item-input item-select">
                     <div class="input-label">请选择小区：</div>
-                    <select ng-model="vm.mydistrict" ng-options="district for district in districts">
+                    <select ng-model="mydistrict" ng-options="district.name for district in districts" ng-change="getDefaultRegionId(mydistrict.id)">
                         <option value="">请选择</option>
                     </select>
                 </label>
