--- a/udqAutoApp/platforms/android/assets/www/app/customer/home/home.html
+++ b/udqAutoApp/platforms/android/assets/www/app/customer/home/home.html
@@ -6,13 +6,7 @@
 
     <ion-content padding="true" scroll="false" class="has-header">
         <ion-tabs class="tabs-stable tabs-icon-top">
-            <ion-tab title="我的" icon="icon ion-heart">
-                <ion-content padding="true">
-                    <!--                  -->
-                </ion-content>
-            </ion-tab>
-
-            <ion-tab title="点趣" icon="icon ion-home">
+            <ion-tab title="点趣" icon-on="ion-ios-home" icon-off="ion-ios-home-outline" class="active">
                 <ion-content padding="true" class="has-header">
                     <!-- 图片轮播 -->
                     <ion-slide-box>
@@ -31,7 +25,7 @@
                             </div>
                         </ion-slide>
                     </ion-slide-box>
-                    
+
                     <div class="spacer" style="width:300px;height:30px;"></div>
                     <!-- 两排按钮 -->
                     <div class="button-bar">
@@ -45,7 +39,13 @@
 
                 </ion-content>
             </ion-tab>
-            <ion-tab title="关于" icon="icon ion-gear-b">
+            <ion-tab title="我的" icon-on="ion-ios-heart" icon-off="ion-ios-heart-outline">
+                <ion-content padding="true">
+                    <!--                  -->
+                </ion-content>
+            </ion-tab>
+
+            <ion-tab title="关于" icon-on="ion-ios-gear" icon-off="ion-ios-gear-outline">
                 <ion-content padding="true">
                     <!--   -->
                 </ion-content>
