--- a/udqAutoApp/platforms/android/assets/www/app/customer/member/memberCenter.html
+++ b/udqAutoApp/platforms/android/assets/www/app/customer/member/memberCenter.html
@@ -3,7 +3,7 @@
         <div>
             <ion-nav-bar class="bar-stable ">
                 <ion-nav-back-button class="button-clear">
-                    <i class="ion-arrow-left-c"></i>back
+                    <div><i class="ion-ios-arrow-left"></i></div>
                 </ion-nav-back-button>
                 <a class="button button-clear icon ion-ios-search-strong"></a>
             </ion-nav-bar>
@@ -29,25 +29,25 @@
 
                 <a class="item item-icon-left  item-icon-right" ng-click="goToAutoInfo()">
                     <i class="icon ion-settings"></i>
-                    车辆管理
+                    车辆
                     <i class="icon ion-chevron-right"></i>
                 </a>
 
                 <a class="item item-icon-left item-icon-right" href="#">
                     <i class="icon ion-chatbubble-working"></i>
-                    消息中心
+                    消息
                     <i class="icon ion-chevron-right"></i>
                 </a>
 
                 <a class="item item-icon-left item-icon-right" ng-click="goToEditOwnerInfo()">
                     <i class="icon ion-gear-a"></i>
-                    基本信息设置
+                    设置
                     <i class="icon ion-chevron-right"></i>
                 </a>
 
                 <a class="item item-icon-left item-icon-right" ng-click="popover.show($event)">
                     <i class="icon ion-mic-a"></i>
-                    客服电话：400-8484-842
+                    客服：400-8484-842
                     <i class="icon ion-ios-telephone-outline"></i>
                 </a>
                 <button class="button button-block button-positive ">退出账号</button>
