--- a/udqAutoApp/platforms/android/assets/www/index.html
+++ b/udqAutoApp/platforms/android/assets/www/index.html
@@ -20,11 +20,15 @@
     <script src="app.js"></script>
     <script src="app/customer/auto/autoAddCtrl.js"></script>
     <script src="app/customer/auto/autoMgr.js"></script>
+    <script src="app/customer/auto/autoSvr.js"></script>
+    <script src="app/customer/auto/autoListCtrl.js"></script>
     <script src="app/customer/home/homeCtrl.js"></script>
     <script src="app/customer/member/memberCenterCtrl.js"></script>
     <script src="app/customer/member/memberInfoEditCtrl.js"></script>
     <script src="app/customer/order/orderCtrl.js"></script>
     <script src="app/customer/order/orderEvaluateCtrl.js"></script>
+    <script src="app/customer/order/orderMakeCtrl.js"></script>
+    <script src="app/customer/order/washtypeCtrl.js"></script>
     <script src="app/customer/register/registerCtrl.js"></script>
     <script src="app/customer/register/registerSvr.js"></script>
     
@@ -34,6 +38,7 @@
     <script src="app/employee/order/orderToBeConfirmedCtrl.js"></script>
     <script src="app/util/appConfig.js"></script>
     <script src="app/util/regionSvr.js"></script>
+    <script src="app/util/sexCtrl.js"></script>
     
 </head>
 <body ng-app="udqApp">
