修改订单的bug

--- a/udqAutoApp/platforms/android/assets/www/app/customer/order/orderMake.html
+++ b/udqAutoApp/platforms/android/assets/www/app/customer/order/orderMake.html
@@ -1,6 +1,7 @@
 <ion-view view-title="洗车预约">
 	<ion-nav-bar class="bar-stable" align-title="center">
 		<ion-nav-back-button class="button-clear">
+            <i class="ion-arrow-left-c"></i>back
 		</ion-nav-back-button>
 	</ion-nav-bar>
 	<ion-content has-subheader="false">
@@ -10,7 +11,6 @@
 			<a class="item item-icon-left item-icon-right" ng-click="goToWashType()">
     			<i class="icon ion-model-s"></i>
     				快洗
-    			<i class="icon ion-ios-telephone-outline"></i>
  			</a>
 		</div>
 		<!-- 车辆信息、预约时间、详细地址（可选） -->
