--- a/udqAutoApp/www/app/customer/order/washtype.html
+++ b/udqAutoApp/www/app/customer/order/washtype.html
@@ -1,6 +1,8 @@
 <ion-view view-title="洗车类型">
 	<ion-nav-bar class="bar-stable" align-title="center">
-		<ion-nav-back-button class="button-clear"></ion-nav-back-button>
+		<ion-nav-back-button class="button-clear">
+            <i class="ion-arrow-left-c"></i>
+        </ion-nav-back-button>
 	</ion-nav-bar>
 	<ion-content has-subheader="false">
 		<div class="list" ng-repeat="type in types">
