--- a/udqAutoApp/www/app/customer/order/orderMake.html
+++ b/udqAutoApp/www/app/customer/order/orderMake.html
@@ -10,37 +10,41 @@
 			<div class="item item-divider">洗车类型</div>
 			<a class="item item-icon-left item-icon-right" ng-click="goToWashType()">
     			<i class="icon ion-model-s"></i>
-    				快洗
+                <div class="item-content">
+                    <h2>{{defaultWashType.name}}</h2><br />
+                    <p>服务内容：{{defaultWashType.note}}</p><br />
+                    <p>价格：￥{{defaultWashType.amount}}</p><br />
+                </div>
+                <i class="icon ion-chevron-right"></i>
  			</a>
-		</div>
-		<!-- 车辆信息、预约时间、详细地址（可选） -->
-		<div class="spacer" style="height:10px;"></div>
-		<div class="list">
 
-                <a class="item item-icon-left  item-icon-right" ng-click="goToAutoList()">
-                    <i class="icon ion-settings"></i>
-                    {{myAuto.pn}}
-                    <i class="icon ion-chevron-right"></i>
-                </a>
+			<!-- 车辆信息、预约时间、详细地址（可选） -->
+			<div class="spacer" style="height:10px;"></div>
 
-                <a class="item item-icon-left item-icon-right" href="#">
-                    <i class="icon ion-chatbubble-working"></i>
-                    小区
-                    <i class="icon ion-chevron-right"></i>
-                </a>
+            <a class="item item-icon-left  item-icon-right" ng-click="goToAutoList()">
+                <i class="icon ion-settings"></i>
+                {{myAuto.pn}}
+                <i class="icon ion-chevron-right"></i>
+            </a>
 
-                <a class="item item-icon-left item-icon-right" ng-click="goToEditOwnerInfo()">
-                    <i class="icon ion-gear-a"></i>
-                    预约时间
-                    <i class="icon ion-chevron-right"></i>
-                </a>
+            <a class="item item-icon-left item-icon-right" href="#">
+                <i class="icon ion-chatbubble-working"></i>
+                小区
+                <i class="icon ion-chevron-right"></i>
+            </a>
 
-                <a class="item item-icon-left item-icon-right" ng-click="popover.show($event)">
-                    <i class="icon ion-mic-a"></i>
-                    详细地址
-                    <i class="icon ion-ios-telephone-outline"></i>
-                </a>
-                <button class="button button-block button-positive ">提交</button>
+            <a class="item item-icon-left item-icon-right" ng-click="goToEditOwnerInfo()">
+                <i class="icon ion-gear-a"></i>
+                预约时间
+                <i class="icon ion-chevron-right"></i>
+            </a>
+
+            <a class="item item-icon-left item-icon-right" ng-click="popover.show($event)">
+                <i class="icon ion-mic-a"></i>
+                详细地址
+                <i class="icon ion-ios-telephone-outline"></i>
+            </a>
+            <button class="button button-block button-positive " ng-click="commitOrder()">提交</button>
         </div>
 	</ion-content>
 </ion-view>
