--- a/udqAutoApp/www/index.html
+++ b/udqAutoApp/www/index.html
@@ -28,6 +28,7 @@
     <script src="app/customer/order/orderCtrl.js"></script>
     <script src="app/customer/order/orderEvaluateCtrl.js"></script>
     <script src="app/customer/order/orderMakeCtrl.js"></script>
+    <script src="app/customer/order/orderMakeSvr.js"></script>
     <script src="app/customer/order/washtypeCtrl.js"></script>
     <script src="app/customer/order/washtypeSvr.js"></script>
     <script src="app/customer/register/registerCtrl.js"></script>
