修改消息推送插件

--- a/udqAutoApp/www/index.html
+++ b/udqAutoApp/www/index.html
@@ -40,6 +40,7 @@
     <script src="app/employee/order/orderToBeConfirmedCtrl.js"></script>
     <script src="app/util/appConfig.js"></script>
     <script src="app/common/regionSvr.js"></script>
+    <script src="lib/LeanPush.js"></script>
     
     
 </head>
