--- a/udqAutoApp/www/app/customer/auto/autoList.html
+++ b/udqAutoApp/www/app/customer/auto/autoList.html
@@ -1,27 +1,27 @@
-<ion-view view-title="车辆列表">
-	<ion-nav-bar class="bar-stable" align-title="center">
-        <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-arrow-left-c" ng-click="goBack()"></button>
-        </ion-nav-buttons>
+<ionview viewtitle="车辆列表">
+    <ionnavbar class="barstable" aligntitle="center">
+        <ionnavbuttons side="left">
+            <button class="buttonclear icon ionarrowleftc" ngclick="goBackOfAuto()"></button>
+        </ionnavbuttons>
 
-        <ion-nav-buttons side="right">
-            <button class="button-clear" ng-click="goToAddauto()">
-                <span class="icon ion-plus-round" ></span>
+        <ionnavbuttons side="right">
+            <button class="buttonclear" ngclick="goToAddauto()">
+                <span class="icon ionplusround"></span>
             </button>
-        </ion-nav-buttons>
-	</ion-nav-bar>
-	<ion-content has-subheader="false">
-		<div class="list" ng-repeat="auto in autoInfo">
-  			<label class="item item-radio">
-    			<input type="radio" name="group">
-                <a class="item item-icon-left ">
-                    <i class="icon ion-model-s"></i>
+        </ionnavbuttons>
+    </ionnavbar>
+    <ioncontent hassubheader="false">
+        <div class="list" ngrepeat="auto in autoInfo">
+            <label class="item itemradio">
+                <input type="radio" name="group" value="{{auto.pn}}" ngmodel="pn">
+                <a class="item itemiconleft ">
+                    <i class="icon ionmodels"></i>
                     <h2>车牌号：{{auto.pn}}</h2>
                     <br />
                     <p>品牌:{{auto.brand}}, 型号：{{auto.model}}</p>
                 </a>
-    			<i class="radio-icon ion-checkmark"></i>
-  			</label>
-		</div>
-	</ion-content>
-</ion-view>
+                <i class="radioicon ioncheckmark"></i>
+            </label>
+        </div>
+    </ioncontent>
+</ionview>
