--- a/udqAutoApp/platforms/android/assets/www/app/customer/order/orderMake.html
+++ b/udqAutoApp/platforms/android/assets/www/app/customer/order/orderMake.html
@@ -1,50 +1,61 @@
 <ion-view view-title="洗车预约">
-	<ion-nav-bar class="bar-stable" align-title="center">
+    <ion-nav-bar class="bar-stable" align-title="center">
         <ion-nav-buttons side="left">
-            <button class="button-clear icon ion-arrow-left-c" ng-click="goBack()"></button>
+            <button class="button-clear icon ion-arrow-left-c" ng-click="goBackMain()"></button>
         </ion-nav-buttons>
-	</ion-nav-bar>
-	<ion-content has-subheader="false">
-		<!-- 选择洗车类型 -->
-		<div class="list">
-			<div class="item item-divider">洗车类型</div>
-			<a class="item item-icon-left item-icon-right" ng-click="goToWashType()">
-    			<i class="icon ion-model-s"></i>
+    </ion-nav-bar>
+    <ion-content has-subheader="false">
+
+        <!-- 选择洗车类型 -->
+        <div class="list">
+            <div class="spacer" style="height:10px;"></div>
+            <a class="item item-icon-left item-icon-right" ng-click="goToWashType()">
+                <i class="icon ion-model-s"></i>
                 <div class="item-content">
-                    <h2>{{defaultWashType.name}}</h2><br />
-                    <p>服务内容：{{defaultWashType.note}}</p><br />
-                    <p>价格：￥{{defaultWashType.amount}}</p><br />
+                    <ul ng-repeat="selectedType in selectedTypes">
+
+                        <li style="float:left;list-style:none;">
+                            <h2>{{selectedType.name}}</h2><br />
+                            <p>服务内容：{{selectedType.note}}</p><br />
+                            <p>价格：￥{{selectedType.amount}}</p><br />
+
+                        </li>
+
+                    </ul>
                 </div>
-                <i class="icon ion-chevron-right"></i>
- 			</a>
-
-			<!-- 车辆信息、预约时间、详细地址（可选） -->
-			<div class="spacer" style="height:10px;"></div>
-
-            <a class="item item-icon-left  item-icon-right" ng-click="goToAutoList()">
-                <i class="icon ion-settings"></i>
-                    选择车辆
                 <i class="icon ion-chevron-right"></i>
             </a>
 
-            <a class="item item-icon-left item-icon-right" href="#">
-                <i class="icon ion-chatbubble-working"></i>
+            <!-- 车辆信息、预约时间、详细地址（可选） -->
+            <div class="spacer" style="height:10px;"></div>
+
+            <a class="item item-icon-left  item-icon-right" ng-click="goToAutoList()">
+                <i class="icon ion-android-options"></i>
+                选择车辆{{pn}}
+                <i class="icon ion-chevron-right"></i>
+            </a>
+            <div class="spacer" style="height:10px;"></div>
+            <a class="item item-icon-left item-icon-right" ng-click="goToRegionSelect()">
+                <i class="icon ion-android-people"></i>
                 小区
                 <i class="icon ion-chevron-right"></i>
             </a>
-
-            <a class="item item-icon-left item-icon-right" ng-click="goToEditOwnerInfo()">
-                <i class="icon ion-gear-a"></i>
+            <div class="spacer" style="height:10px;"></div>
+            <a class="item item-icon-left item-icon-right" ng-click="goToOrderTime()">
+                <i class="icon ion-ios-time"></i>
                 预约时间
                 <i class="icon ion-chevron-right"></i>
             </a>
+            <div class="spacer" style="height:10px;"></div>
 
-            <a class="item item-icon-left item-icon-right" ng-click="popover.show($event)">
-                <i class="icon ion-mic-a"></i>
-                详细地址
-                <i class="icon ion-ios-telephone-outline"></i>
-            </a>
+            <textarea rows="3" placeholder="备注：" cols="50"></textarea>
+
+
+
+
+            <div class="spacer" style="height:10px;"></div>
             <button class="button button-block button-positive " ng-click="commitOrder()">提交</button>
+
         </div>
-	</ion-content>
+    </ion-content>
 </ion-view>
