--- a/udqAutoApp/www/app/customer/order/washtype.html
+++ b/udqAutoApp/www/app/customer/order/washtype.html
@@ -1,19 +1,19 @@
-<ionview viewtitle="洗车类型">
-    <ionnavbar class="barstable" aligntitle="center">
-        <ionnavbuttons side="left">
-            <button class="buttonclear icon ionarrowleftc" ngclick="goBackOfWashType()"></button>
-        </ionnavbuttons>
-    </ionnavbar>
-    <ioncontent hassubheader="false">
+<ion-view view-title="洗车类型">
+    <ion-nav-bar class="bar-stable" align-title="center">
+        <ion-nav-buttons side="left">
+            <button class="button-clear icon ion-arrow-left-c" ng-click="goBackOfWashType()"></button>
+        </ion-nav-buttons>
+    </ion-nav-bar>
+    <ion-content has-subheader="false">
 
-        <ul class="list" ngrepeat="type in types">
+        <ul class="list" ng-repeat="type in types">
 
-            <li class="item itemcheckbox">
+            <li class="item item-checkbox">
                 <label class="checkbox">
-                    <input type="checkbox" ngclick="selectwashTypes($event,type)" />
+                    <input type="checkbox" ng-click="selectwashTypes($event,type)" />
 
                 </label>
-                <div class="itemcontent">
+                <div class="item-content">
                     <h2>{{type.name}}</h2><br />
                     <p>服务内容：{{type.note}}</p><br />
                     <p>价格：￥{{type.amount}}</p><br />
@@ -23,5 +23,5 @@
             </li>
 
         </ul>
-    </ioncontent>
-</ionview>
+    </ion-content>
+</ion-view>
