--- a/udqAutoApp/www/app/customer/home/home.html
+++ b/udqAutoApp/www/app/customer/home/home.html
@@ -29,7 +29,7 @@
             &nbsp&nbsp&nbsp&nbsp
             <a class="button button-circle" ng-click="goToBookWash()">洗车</a>&nbsp&nbsp&nbsp&nbsp&nbsp
             <a class="button button-circle" ng-click="goToMyOrder()">订单</a>&nbsp&nbsp&nbsp&nbsp&nbsp
-            <a class="button button-circle" ng-click="goToMyOrder()">车辆</a>
+            <a class="button button-circle" ng-click="goToAutoList()">车辆</a>
         </div>
         <div class="spacer" style="height:10px;"></div>
         <div>
