--- a/udqAutoApp/platforms/android/assets/www/app/login/login.html
+++ b/udqAutoApp/platforms/android/assets/www/app/login/login.html
@@ -1,9 +1,9 @@
 ﻿
 <ion-view align-title="center" title="点趣车生活">
-    <ion-nav-bar class="bar-stable">
-        <ion-nav-back-button class="button-clear">
-            <i class="ion-arrow-left-c"></i>back
-        </ion-nav-back-button>
+    <ion-nav-bar class="bar-stable" align-title="center">
+        <ion-nav-buttons side="left">
+            <button class="button-clear icon ion-arrow-left-c" ng-click="goBack()"></button>
+        </ion-nav-buttons>
     </ion-nav-bar>
 
     <ion-content padding="true" class="has-header">
@@ -27,19 +27,21 @@
 
         <form>
             <ion-list>
+                <div class="spacer"style="height:10px;"></div>
                 <label class="item item-input">
-                    <i class="icon ion-search placeholder-icon"></i>
+                    <i class="icon ion-ios-telephone-outline placeholder-icon"></i>
                     <input type="tel" name="userName" placeholder="请输入手机号码" ng-model="user.userName" required>
                 </label>
 
-                <label class="item item-input">
-                    <i class="icon ion-search placeholder-icon"></i>
-                    <input type="password" name="password" placeholder="请输入密码" ng-model="user.password" required>
+                <label class="item item-input item-button-right" ng-show="showVefiry">
+                    <i class="icon ion-ios-chatboxes-outline placeholder-icon"></i>
+                    <input type="password" name="password" placeholder="请输入手机验证码" ng-model="user.password" required>
+                    <button class="button button-positive">
+                        获取验证码
+                    </button>
                 </label>
 
             </ion-list>
-            <div class="button-bar"></div>
-
             <button class="button button-stable button-block " ng-click="login()">登录</button>
             <button class="button button-stable button-block " ng-click="register()">注册</button>
         </form>
