--- a/udqAutoApp/www/app/customer/home/home.html
+++ b/udqAutoApp/www/app/customer/home/home.html
@@ -35,7 +35,7 @@
         <div>
             &nbsp&nbsp&nbsp&nbsp
             <a class="button button-circle">优惠券</a>&nbsp&nbsp&nbsp&nbsp&nbsp
-            <a class="button button-circle">服务</a>&nbsp&nbsp&nbsp&nbsp&nbsp
+            <a class="button button-circle" ng-click="goToWashTypeIntroduce()">服务</a>&nbsp&nbsp&nbsp&nbsp&nbsp
             <a class="button button-circle"ng-click="goToMyDQ()">我的</a>
         </div>
  
