--- a/udqAutoApp/www/app/customer/member/memberCenter.html
+++ b/udqAutoApp/www/app/customer/member/memberCenter.html
@@ -6,32 +6,30 @@
     </ion-nav-bar>
     <ion-content>
 
-            <div class="item item-avatar" style="height:120px;">
-                <img src="../images/ownerIcon.jpg">
-                <h2>Marty McFly</h2>
-                <p>November 05, 1955</p>
-            </div>
-           
+        <div class="item item-avatar" style="height:120px;">
+            <img src="../images/ownerIcon.jpg">
+            <h2>Marty McFly</h2>
+            <p>November 05, 1955</p>
+        </div>
+
 
         <!--分隔带-->
         <div class="spacer" style="height: 10px;"></div>
-            <!--列表-->
-         <div class="list">
+        <!--列表-->
+        <div class="list">
 
-                <a class="item item-icon-left item-icon-right" ng-click="goToEditOwnerInfo()">
-                    <i class="icon ion-gear-a"></i>
-                    设置
-                    <i class="icon ion-chevron-right"></i>
-                </a>
+            <a class="item item-icon-left " ng-click="goToEditOwnerInfo()">
+                <i class="icon ion-compose"></i>
+                设置
+            </a>
 
-                <a class="item item-icon-left item-icon-right" ng-click="popover.show($event)">
-                    <i class="icon ion-mic-a"></i>
-                    客服：400-8484-842
-                    <i class="icon ion-ios-telephone-outline"></i>
-                </a>
-                <button class="button button-block button-positive ">退出账号</button>
-            </div>
+            <a class="item item-icon-left" ng-click="popover.show($event)">
+                <i class="icon ion-ios-telephone-outline"></i>
+                客服：400-8484-842
+            </a>
+            <button class="button button-block button-positive ">退出账号</button>
+        </div>
     </ion-content>
-    
+
 
 </ion-view>
