--- a/udqAutoApp/www/app/customer/register/register.html
+++ b/udqAutoApp/www/app/customer/register/register.html
@@ -1,9 +1,9 @@
 <ion-view title="注册">
-    <div class="bar bar-header">
-        <div class="h1 title">注册</div>
-        <!--<a class="button button-clear icon ion-ios-search-strong"></a>-->
-<!--         <button class="button button-icon icon ion-navicon"></button> -->
-    </div>
+    <ion-nav-bar class="bar-stable" align-title="center">
+        <ion-nav-buttons side="left">
+            <button class="button-clear icon ion-arrow-left-c" ng-click="goBack()"></button>
+        </ion-nav-buttons>
+    </ion-nav-bar>
 
     <ion-content padding="true" class="has-header">
         <form>
@@ -12,27 +12,24 @@
                     <i class="icon ion-ios-telephone placeholder-icon"></i>
                     <input type="tel" placeholder="请输入手机号码" ng-model="userInfo.phoneNumber" required>
                 </label>
-                <!-- <div class="item item-input-inset">
-                    <label class="item-input-wrapper">
-                        <input type="text" placeholder="输入手机验证码">
-                    </label>
-                    <button class="button button-small" ng-click="getValidateCode()">
-                        获取手机验证码
+                <label class="item item-input item-button-right">
+                    <i class="icon ion-ios-chatboxes-outline placeholder-icon"></i>
+                    <input type="password" name="password" placeholder="请输入手机验证码" ng-model="user.password" required>
+                    <button class="button button-positive">
+                        获取验证码
                     </button>
-                </div> -->
+                </label>
                 <div class="spacer" style="height:30px;"></div>
                 <label class="item item-input">
                     <i class="icon ion-ios-person placeholder-icon"></i>
                     <input type="text" name="name" ng-model="userInfo.userName" placeholder="请输入称呼" required>
                 </label>
-                <label class="item item-input">
-                    <i class="icon ion-key placeholder-icon"></i>
-                    <input type="password" name="name" ng-model="userInfo.password" placeholder="请输入密码" required>
-                </label>
-                <label class="item item-input">
-                    <i class="icon ion-pin placeholder-icon"></i>
-                    <input type="password" name="name" placeholder="请确认密码" ng-pattern={{userInfo.password}} required>
-                </label>
+
+                <ion-item >
+                    <input type="radio" name="sex" />男士&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                    <input type="radio" name="sex" />女士
+                </ion-item>
+                
 
             </ion-list>
             <button class="button button-stable button-block " ng-click="register()">注册</button>
